--- a/CargadosTrucking/CargadosTrucking/Editarfotografia.xaml
+++ b/CargadosTrucking/CargadosTrucking/Editarfotografia.xaml
@@ -13,23 +13,24 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="45" />
         
-                <RowDefinition Height="35" />
+                <RowDefinition Height="40" />
 
 
             </Grid.RowDefinitions>
             <StackLayout x:Name="toolscopntrols" IsVisible="true" Margin="40,5,40,5" HorizontalOptions="FillAndExpand" Orientation="Horizontal" Grid.Row="0">
-                <Button  HorizontalOptions="StartAndExpand" VerticalOptions="Center" ImageSource="crop.png" FontAttributes="Bold"  FontSize="Micro" TextColor="White" BackgroundColor="White" WidthRequest="30" Clicked="cropbutton"  />
-                <Button  HorizontalOptions="CenterAndExpand" VerticalOptions="Center"  ImageSource="rotateright"  FontAttributes="Bold" FontSize="Micro" TextColor="White"  BackgroundColor="White"  WidthRequest="30" Clicked="rotatebutton"  />
-                <Button  HorizontalOptions="EndAndExpand" VerticalOptions="Center" ImageSource="camerachange.png"  FontAttributes="Bold" FontSize="Micro" TextColor="White"  BackgroundColor="White" WidthRequest="30"  Command="{Binding TomarFoto}"  />
+                <ImageButton  HorizontalOptions="StartAndExpand" VerticalOptions="Center"  Source="crop.png"  BackgroundColor="White" WidthRequest="30" Clicked="cropbutton"  />
+                <ImageButton  HorizontalOptions="CenterAndExpand" VerticalOptions="Center"  Source="rotateright"   BackgroundColor="White"  WidthRequest="30" Clicked="rotatebutton"  />
+                <ImageButton  HorizontalOptions="EndAndExpand" VerticalOptions="Center" Source="camerachange.png"    BackgroundColor="White" WidthRequest="30"  Command="{Binding TomarFoto}"  />
             </StackLayout>
             <StackLayout x:Name="croppedcontrols" IsVisible="false" Margin="40,5,40,5" HorizontalOptions="FillAndExpand" Orientation="Horizontal" Grid.Row="0">
-                <Button  HorizontalOptions="StartAndExpand"  Text="X" FontAttributes="Bold"  FontSize="Micro" TextColor="White" BackgroundColor="#354883" WidthRequest="30" Clicked="cerrarcrop" HeightRequest="30" BorderRadius="15"/>
+                <ImageButton  HorizontalOptions="StartAndExpand" Source="eliminarbutton" BackgroundColor="White"  Clicked="cerrarcrop" WidthRequest="30" />
                 <Label Text="Crop" HorizontalOptions="CenterAndExpand" TextColor="Black" VerticalOptions="CenterAndExpand" />
-                <Button  HorizontalOptions="EndAndExpand" Text="&#x2713;" FontAttributes="Bold" FontSize="Micro" TextColor="White"  BackgroundColor="#5aa755" WidthRequest="30" Clicked="guardarcrop" HeightRequest="30" BorderRadius="15"/>
+                <ImageButton  HorizontalOptions="EndAndExpand" Source="ok"  BackgroundColor="White"  Clicked="guardarcrop" WidthRequest="30"  />
             </StackLayout>
             <imageeditor:SfImageEditor  x:Name="Editorfoto" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Grid.Row="1" Source="{Binding CurrentImage,Converter={StaticResource convertimage}}" >
 
             </imageeditor:SfImageEditor>
+
 
 
             <Entry Grid.Row="2" Margin="0,0,15,0" Placeholder="Comments" HorizontalOptions="FillAndExpand"    Text="{Binding Comments}"  Style="{StaticResource InputMain}"/>
